# motadata-apm-cpp-instrumentation

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md
include/: motadata.h
src/: motadata.cpp
